# tally-tauri

./: .gitignore  CLAUDE.md  README.md  drizzle.config.ts  eslint.config.js  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: android-apk.yml
src/: App.css  App.tsx  main.tsx  router.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0000_init.sql  0001_captures.sql  0002_garmin_workout_source.sql  0003_health_data.sql  0004_chats.sql  0005_achievements.sql
src-tauri/migrations/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  0005_snapshot.json  _journal.json
src-tauri/plugins/fasting/: Cargo.toml  build.rs
src-tauri/plugins/fasting/android/: build.gradle.kts
src-tauri/plugins/fasting/android/src/main/: AndroidManifest.xml
src-tauri/plugins/fasting/android/src/main/java/com/madsbuch/tally/fasting/: FastingPlugin.kt  FastingService.kt
src-tauri/plugins/fasting/permissions/: default.toml
src-tauri/plugins/fasting/src/: android.rs  commands.rs  error.rs  lib.rs  models.rs  noop.rs
src-tauri/plugins/health-connect/: Cargo.toml  build.rs
src-tauri/plugins/health-connect/android/: build.gradle.kts  consumer-rules.pro
src-tauri/plugins/health-connect/android/src/main/: AndroidManifest.xml
src-tauri/plugins/health-connect/android/src/main/java/com/madsbuch/tally/healthconnect/: HealthConnectPlugin.kt
src-tauri/plugins/health-connect/permissions/: default.toml
src-tauri/plugins/health-connect/src/: android.rs  commands.rs  lib.rs  models.rs  noop.rs
src-tauri/plugins/share/: Cargo.toml  build.rs
src-tauri/plugins/share/android/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
src-tauri/plugins/share/android/src/main/java/com/madsbuch/tally/share/: SharePlugin.kt
src-tauri/plugins/share/permissions/: default.toml
src-tauri/plugins/share/src/: android.rs  commands.rs  lib.rs  models.rs  noop.rs
src-tauri/src/: lib.rs
src/components/: AchievementsSheet.tsx  AssistantChart.tsx  NutrientTable.tsx
src/db/: schema.ts
src/lib/: achievements.ts  agent.ts  assistant.ts  db.ts  exportDb.ts  fasting.ts  healthConnect.ts  nutrients.ts  openFoodFacts.ts  openrouter.ts  photos.ts  schemas.ts  streak.ts  types.ts
src/pages/: 404.tsx  AssistantPage.tsx  DiaryPage.tsx  FastingPage.tsx  NutrientsPage.tsx  SettingsPage.tsx  SupplementsPage.tsx  _app.tsx  assistant.tsx  fasting.tsx  index.tsx  nutrients.tsx  settings.tsx
src/screens/: AssistantPage.tsx  DiaryPage.tsx  FastingPage.tsx  NutrientsPage.tsx  SettingsPage.tsx  SupplementsPage.tsx
