[package]
name = "tally"
version = "0.1.0"
description = "Tally — local-first fitness and lifestyle tracker"
authors = ["Mads Buch"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tally_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
# preserve_order keeps SELECT column order in plugin-sql row objects,
# which Drizzle's sqlite-proxy relies on for positional row mapping.
serde_json = { version = "1", features = ["preserve_order"] }
tauri-plugin-sql = { version = "2.4.0", features = ["sqlite"] }
tauri-plugin-notification = "2.3.3"
tauri-plugin-http = "2.5.9"
base64 = "0.22.1"
tauri-plugin-fasting = { path = "plugins/fasting" }
tauri-plugin-health-connect = { path = "plugins/health-connect" }

