[package]
name = "tauri-plugin-fasting"
version = "0.1.0"
description = "Sticky Android countdown notification for fasting sessions"
edition = "2021"
links = "tauri-plugin-fasting"

[dependencies]
tauri = { version = "2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(mobile)',
  'cfg(desktop)',
] }
