[package]
name = "tauri-plugin-share"
version = "0.1.0"
description = "Android share-sheet for exporting files (no-op on desktop/iOS)"
edition = "2021"
links = "tauri-plugin-share"

[dependencies]
tauri = { version = "2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(mobile)',
  'cfg(desktop)',
] }
